<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:animationCache="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_location">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:clipToPadding="false"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="false"
        app:layout_collapseMode="parallax">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete"
                android:padding="@dimen/spacing_large" />

            <ImageButton
                android:contentDescription="@string/search"
                android:id="@+id/action_search"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_search"
                android:tint="@color/grey_60" />
            <ImageButton
                android:contentDescription="@string/my_location"
                android:id="@+id/action_location"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_user_location"
                android:tint="@color/grey_60" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_colored"
                android:padding="@dimen/dimen_20"
                android:text="@string/your_area"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_dark"
                android:drawableStart="@drawable/ic_worker"
                android:padding="@dimen/dimen_20"
                android:text="@string/enjoy_3alfraza"
                android:textColor="@drawable/text_white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/permission_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_warning"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@string/permission_not_granted"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_dark"
                android:padding="@dimen/dimen_20"
                android:text="@string/RETRY"
                android:textColor="@drawable/text_white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/connection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_warning"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@string/msg_no_internet"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_dark"
                android:padding="@dimen/dimen_20"
                android:text="@string/TRY_AGAIN"
                android:textColor="@drawable/text_white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_colored"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@string/enable_locatin_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_dark"
                android:padding="@dimen/dimen_20"
                android:text="@string/enable_locatin_head"
                android:textColor="@drawable/text_white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cover_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/covering_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_colored"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@string/sorry_no_cover"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_notify_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_dark"
                android:drawableStart="@drawable/ic_bell"
                android:padding="@dimen/dimen_20"
                android:text="@string/notify_when_available"
                android:textColor="@drawable/text_white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
        android:id="@+id/loader"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_20"
        android:padding="10dp"
        android:src="@drawable/ic_logo"
        android:visibility="gone"
        app:cfl_border="true"
        app:cfl_border_width="6dp"
        app:cfl_progress="80"
        app:cfl_wave_amplitude="0.06"
        app:cfl_wave_color="@color/colorPrimary" />
</RelativeLayout>